# scribe

./: .gitignore  AGENT.md  README.md  pyproject.toml  run_agent.py
configs/: README.md  example_gpt2_test.yaml  gemma_secret_extraction.yaml
example-run/: 2025-10-04-17-23_SecretPreferenceInvestigation.ipynb
scribe/modal/: __init__.py  images.py  jupyter_runner.py  model_service.py
scribe/notebook/: notebook_mcp_server.py  technique_loader.py  technique_manager.py
techniques/: analyze_token_probs.py  batch_generate.py  get_model_info.py  logit_lens.py  prefill_attack.py
tests/: test_modal_script.py
